--- a/004_TPOT.ipynb
+++ b/004_TPOT.ipynb
@@ -114,7 +114,9 @@
     "from tpot import TPOTClassifier\n",
     "from tpot import TPOTRegressor\n",
     "\n",
-    "\n"
+    "tpot = TPOTRegressor(generations=5,verbosity=2)\n",
+    "\n",
+    "tpot.fit(handler.X_train,handler.y_train)"
    ]
   },
   {
